# snrg-app

./: .gitignore  MANIFEST.in  README.md  preview.html  pyproject.toml  requirements.txt  serve.cjs  setup.py
.claude/: launch.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  index.css  main.js
frontend/src/composables/: useQuoteStore.js
frontend/src/pages/: CustomerSelect.vue  Home.vue  ItemList.vue  NewQuoteCustomer.vue  NewQuoteItems.vue  NewQuoteReview.vue  QuotationList.vue
frontend/src/router/: index.js
snrg_sales_pwa/: hooks.py  install.py  modules.txt
snrg_sales_pwa/api/: sales.py
snrg_sales_pwa/fixtures/: Page.json
snrg_sales_pwa/public/: sw.js
snrg_sales_pwa/public/js/: main.css  manifest.webmanifest  sales_pwa-vendor.js  sales_pwa.js
snrg_sales_pwa/snrg_sales_pwa/page/sales_pwa/: sales_pwa.html  sales_pwa.js  sales_pwa.json  sales_pwa.py
