[project]
name = "snrg_sales_pwa"
authors = [{ name = "SNRG" }]
description = "Sales Quotation PWA for the SNRG sales team"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "snrg_sales_pwa"
